Grid somewhat works

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
         <script src="index.js" defer></script>
     </head>
     <body>
-        <h1 id="header">Test!</h1>
+        <div class="container">
+            <h1>Etch-a-sketch</h1>
+            <div class="toolbar">
+                <button>Click me!</button>
+            </div>
+            <div class="grid"></div>
+        </div>
     </body>
 </html>
