--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <div class="container">
             <h1>Etch-a-sketch</h1>
             <div class="toolbar">
-                <button>Click me!</button>
+                <div class="grid-size-input">
+                    <label for="gridSize">Grid size (max 100):</label>
+                    <input type="number" id="gridSize" />
+                </div>
+                <button type="button" class="change-grid">Click me!</button>
             </div>
             <div class="grid"></div>
         </div>
