--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
                     <label for="gridSize">Grid size (max 100):</label>
                     <input type="number" id="gridSize" />
                 </div>
-                <button type="button" class="change-grid">Click me!</button>
+                <button type="button" class="change-grid">Redraw grid</button>
             </div>
+            <div class="info-container">
+                Current grid size is:&nbsp;<span class="info">16</span>
+            </div>
+            <br />
             <div class="grid"></div>
         </div>
     </body>
