--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                     <label for="gridSize">Grid size (max 100):</label>
                     <input type="number" id="gridSize" />
                 </div>
+                <div class="rgb-input">
+                    <label for="isRgb">RGB?</label>
+                    <input type="checkbox" id="isRgb" />
+                </div>
                 <button type="button" class="change-grid">Redraw grid</button>
             </div>
             <div class="info-container">
