--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body>
         <div class="container">
             <h1>Etch-a-sketch</h1>
+            <p>To clear the board, just click on redraw!</p>
             <div class="toolbar">
                 <div class="grid-size-input">
                     <label for="gridSize">Grid size (max 100):</label>
@@ -28,6 +29,11 @@
             </div>
             <br />
             <div class="grid"></div>
+            <br />
+            <p>
+                Created by
+                <a href="https://github.com/Fleeym">Fleym</a>
+            </p>
         </div>
     </body>
 </html>
